Various nitpicks by @coderabbit fixed, IDEA suggestions implemented (!), and formatting